--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^25.2.3",
     "jest": "^26.0.1",
+    "memfs": "^3.2.0",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.3"
   },
