--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 dist/
+coverage/
 
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm,node
