--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/mcountryman/typenv",
   "description": "Type safe environment configuration loader",
   "scripts": {
+    "doc": "typedoc --theme minimal --out docs src",
     "test": "jest",
     "build": "tsc"
   },
@@ -15,6 +16,7 @@
     "jest": "^26.0.1",
     "memfs": "^3.2.0",
     "ts-jest": "^26.1.0",
+    "typedoc": "^0.17.7",
     "typescript": "^3.9.3"
   },
   "jest": {
