--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "https://github.com/mcountryman/typenv",
   "description": "Type safe environment configuration loader",
   "scripts": {
-    "doc": "typedoc --out docs --exclude '**/*_spec.ts' src",
+    "doc": "typedoc",
     "test": "jest",
     "build": "tsc"
   },
