:fire: Remove docs folder in preparation for github actions publish

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
   "typedocOptions": {
     "out": "docs",
     "mode": "modules",
-    "readme": "README.md",
+    "readme": "./README.md",
     "exclude": "**/*_spec.ts",
     "entryPoint": "\"index\"",
     "inputFiles": ["./src"]
