:bug: Attempt to fix docs publish command

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,8 +13,8 @@ jobs:
 
       - name: Generate docs
         run:
-          - yarn
-          - yarn doc
+          yarn
+          yarn doc
 
       - name: Publish generated content to GitHub Pages
         uses: tsunematsu21/actions-publish-gh-pages@v1.0.1
