--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Generate docs
+        uses: borales/actions-yarn@v2.0.0
         run:
-          - yarn
-          - yarn doc
+          yarn
+          yarn doc
 
       - name: Publish generated content to GitHub Pages
         uses: tsunematsu21/actions-publish-gh-pages@v1.0.1
