--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,11 +11,13 @@ jobs:
       - name: Check out
         uses: actions/checkout@v1
 
-      - name: Generate docs
-        uses: borales/actions-yarn@v2.0.0
-        run:
-          yarn
-          yarn doc
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install
+
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: doc
 
       - name: Publish generated content to GitHub Pages
         uses: tsunematsu21/actions-publish-gh-pages@v1.0.1
