--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typenv",
   "main": "dist/index.js",
   "author": "Marvin Countryman <me@maar.vin>",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "license": "MIT",
   "repository": "https://github.com/mcountryman/typenv",
   "description": "Type safe environment configuration loader",
