--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,17 @@
 {
   "compilerOptions": {
+    "lib": ["es5", "es6"],
+
     "outDir": "dist",
     "rootDir": "src",
     "baseUrl": ".",
 
     "module": "commonjs",
-    "target": "es6",
+    "pretty": true,
+    "target": "es5",
     "sourceMap": true,
+    "declaration": true,
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
