--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            return context.payload.ref.replace(/\/refs\/tags\/v/, '');
+            return context.payload.ref.replace(/refs\/tags\/v/, '');
       - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: publish --new-version ${{ steps.tag.outputs.result }}
