--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Publish npm
         uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          always-auth: true
+          node-version: 13.x
           registry-url: 'https://registry.npmjs.org'
       - run: yarn
       - run: yarn build
