--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "doc": "typedoc",
     "test": "jest",
+    "lint": "tslint --project .",
     "build": "rimraf ./dist && tsc"
   },
   "dependencies": {
@@ -23,8 +24,12 @@
     "@types/jest": "^25.2.3",
     "jest": "^26.0.1",
     "memfs": "^3.2.0",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.1.0",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.3"
   },
