--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,13 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - uses: borales/actions-yarn@v2.0.0
+      - uses:  actions/setup-node@v1
         with:
-          cmd: install
-
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: doc
+          node-version: 14.x
+      - run: yarn
+      - run: yarn doc
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
