--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.14",
     "jest": "^26.0.1",
     "memfs": "^3.2.0",
     "prettier": "^2.0.5",
